--- a/Udemy.TodoAppNTier/Udemy.TodoAppNTier.Business/Udemy.ToDoAppNTier.Business.csproj
+++ b/Udemy.TodoAppNTier/Udemy.TodoAppNTier.Business/Udemy.ToDoAppNTier.Business.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Udemy.ToDoAppNTier.Common\Udemy.ToDoAppNTier.Common.csproj" />
     <ProjectReference Include="..\Udemy.TodoAppNTier.DataAccess\Udemy.TodoAppNTier.DataAccess.csproj" />
     <ProjectReference Include="..\Udemy.TodoAppNTier.Dtos\Udemy.ToDoAppNTier.Dtos.csproj" />
   </ItemGroup>
